--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,32 @@
             <artifactId>antlr4-runtime</artifactId>
             <version>${antlr4.runtime.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-io</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.systemdir.gml</groupId>
+            <artifactId>GMLWriterForYed</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>16.0.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
